--- a/assets/CSS/file.css
+++ b/assets/CSS/file.css
@@ -437,7 +437,7 @@ opacity: 1;
     font-weight: 500;
     line-height: 1.5em;
     color: #222;
-    text-transform: capitalize;
+    text-transform: none;
    
 }
 
